app/src/main/kotlin/org/example/error/ErrorCodes.kt
package org.example.error

object ErrorCodes {
    const val MISSING_REQUIRED_PARAMETER = "ERR_400_001"
    const val INVALID_CART_VALUE = "ERR_400_002"
    const val INVALID_USER_LAT = "ERR_400_003"
    const val INVALID_USER_LON = "ERR_400_004"
    const val DELIVERY_NOT_POSSIBLE = "ERR_400_006"
    const val VENUE_NOT_FOUND = "ERR_400_007"
    const val INTERNAL_SERVER_ERROR = "ERR_500_001"
}
